--- a/colorCircles/src/QtColorWidgets/color_dialog.ui
+++ b/colorCircles/src/QtColorWidgets/color_dialog.ui
@@ -30,6 +30,12 @@
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
+         <property name="minimumSize">
+          <size>
+           <width>200</width>
+           <height>200</height>
+          </size>
+         </property>
         </widget>
        </item>
        <item>
@@ -38,7 +44,7 @@
       </layout>
      </item>
      <item>
-      <layout class="QGridLayout" name="gridLayout">
+      <layout class="QGridLayout" name="gridLayout" columnminimumwidth="0,150,70">
        <item row="2" column="1">
         <widget class="color_widgets::GradientSlider" name="slide_value">
          <property name="maximum">
@@ -52,14 +58,14 @@
        <item row="1" column="0">
         <widget class="QLabel" name="label_7">
          <property name="text">
-          <string>Saturation</string>
+          <string>Насыщенность</string>
          </property>
         </widget>
        </item>
        <item row="0" column="0">
         <widget class="QLabel" name="label_6">
          <property name="text">
-          <string>Hue</string>
+          <string>Оттенок</string>
          </property>
         </widget>
        </item>
@@ -76,14 +82,14 @@
        <item row="10" column="0">
         <widget class="QLabel" name="label_8">
          <property name="text">
-          <string>Hex</string>
+          <string>Имя цвета</string>
          </property>
         </widget>
        </item>
        <item row="6" column="0">
         <widget class="QLabel" name="label_3">
          <property name="text">
-          <string>Blue</string>
+          <string>Синий</string>
          </property>
         </widget>
        </item>
@@ -120,28 +126,28 @@
        <item row="2" column="0">
         <widget class="QLabel" name="label_5">
          <property name="text">
-          <string>Value</string>
+          <string>Светлота</string>
          </property>
         </widget>
        </item>
        <item row="5" column="0">
         <widget class="QLabel" name="label_2">
          <property name="text">
-          <string>Green</string>
+          <string>Зеленый</string>
          </property>
         </widget>
        </item>
        <item row="8" column="0">
         <widget class="QLabel" name="label_alpha">
          <property name="text">
-          <string>Alpha</string>
+          <string>Прозрачность</string>
          </property>
         </widget>
        </item>
        <item row="4" column="0">
         <widget class="QLabel" name="label">
          <property name="text">
-          <string>Red</string>
+          <string>Красный</string>
          </property>
         </widget>
        </item>
